[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/enemyLooper.gd" type="Script" id=1]
[ext_resource path="res://resources/textures/sprEnemyLooper.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=11]
radius = 7.0

[node name="enemyLooper" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 4
script = ExtResource( 1 )

[node name="tween" type="Tween" parent="."]

[node name="animatedSprite" type="AnimatedSprite" parent="."]
light_mask = 0
position = Vector2( 0, -7 )
frames = SubResource( 15 )
playing = true

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
shape = SubResource( 11 )

[node name="rcFront" type="RayCast2D" parent="."]
position = Vector2( 7, -7 )
z_index = 500
enabled = true
cast_to = Vector2( 1, 0 )
collision_mask = 4

[node name="rcFloorLeft" type="RayCast2D" parent="."]
z_index = 500
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 4
collide_with_areas = true

[node name="rcFloorRight" type="RayCast2D" parent="."]
position = Vector2( 4, 0 )
z_index = 500
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 4
